# code-copilot-team

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.html  README.md  SECURITY.md  marketplace.json  package.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  pull_request_template.md
benchmarks/: README.md  __init__.py  compare-config.example.json
claude_code/: claude-code  claude-setup.sh
docs/: github-hardening-playbook.md  sdd-vs-code-copilot-team.md  shape-up-workflow.md
knowledge/: README.md
scripts/: apply-branch-protection.sh  auto-build-loop.sh  bench  benchmark  check-github-hardening.sh  check-origin-alignment.sh  generate.sh  harden-github.sh  monitor-benchmark.sh  peer-review-runner.sh  pi-convert-command.sh  pre-pr-check.sh  providers-health.sh  review-round-runner.sh  run-compare-anthropic-vs-ollama.sh  run-compare-anthropic-vs-vllm.sh  run-compare-sonnet-vs-qwen.sh  session-analytics  setup.sh  validate-capabilities.sh  validate-cct-config.sh  validate-collaboration.sh  validate-pitch.sh  validate-spec.sh  validate-workflows.sh  wiki  wiki-ingest
shared/templates/domain-pack/python-wrapper/: README.md  pyproject.toml  setup.py
shared/templates/domain-pack/python-wrapper/src/domain_pack/: __init__.py  loader.py  models.py
shared/templates/domain-pack/python-wrapper/tests/: test_loader.py
studio/: .gitignore  README.md  global.d.ts  package-lock.json  package.json  tailwind.config.ts
tests/: test-auto-build-loop.sh  test-cooldown-recommendation.sh  test-counts.env  test-generate.sh  test-hooks.sh  (+10 more)
(+972 files in other folders)
